[project]
name = "hysplit-model-dispersion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "contextily>=1.7.0",
    "fastkml>=1.4.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pysplit>=0.3.6",
    "scipy>=1.17.1",
    "simplekml>=1.3.6",
]
